--- a/SBuckUp/App.xaml
+++ b/SBuckUp/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="SBuckUp.App"
+﻿<Application x:Class="SBackUp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SBuckUp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:SBackUp"
+             StartupUri="Views/TaskView.xaml">
     <Application.Resources>
          
     </Application.Resources>
