--- a/SBackUp/App.xaml
+++ b/SBackUp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SBackUp"
-             StartupUri="Views/ControlPanelView.xaml">
+             StartupUri="Views/TaskManagerView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
