--- a/SBackUp/Views/TaskManager.xaml
+++ b/SBackUp/Views/TaskManager.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SBackUp.Views.ControlPanelView"
+﻿<Window x:Class="SBackUp.Views.TaskManager"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,7 +9,7 @@
         WindowStyle="None"
         Title="S BackUp" Height="500" Width="750"
         ResizeMode="CanMinimize" MouseDown="Window_MouseDown">
-    
+
     <Grid x:Name="G_ControlPanel" Background="Transparent">
 
         <StackPanel x:Name="SP_Panles">
@@ -18,11 +18,15 @@
                 <StackPanel Orientation="Horizontal"
                             Width="750" Height="30" Background="#2C3E50">
                     <!--#region IMAGE-->
+                    <fa:IconImage Icon="Database" Margin="15,4,2,4"
+                                  Foreground="Azure"
+                                  Width="305" Height="22"
+                                  VerticalAlignment="Center" HorizontalAlignment="Right"></fa:IconImage>
                     <!--#endregion-->
                     <!--#region TITLE-->
                     <TextBlock Text="S BackUp"
-                               Height="30" Width="636"
-                               HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="44,0,0,0"
+                               Height="28" Width="353"
+                               HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5,0,0,0"
                                FontSize="20" Foreground="White"></TextBlock>
                     <!--#endregion-->
                     <!--#region BUTTONS-->
