--- a/SBackUp/Views/TaskManagerView.xaml
+++ b/SBackUp/Views/TaskManagerView.xaml
@@ -1,14 +1,27 @@
-﻿<Window x:Class="SBackUp.Views.TaskManager"
+﻿<Window x:Class="SBackUp.Views.TaskManagerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+        xmlns:viewModel="clr-namespace:SBackUp.ViewModels"
         xmlns:local="clr-namespace:SBackUp"
         mc:Ignorable="d"
         WindowStyle="None"
         Title="S BackUp" Height="500" Width="750"
         ResizeMode="CanMinimize" MouseDown="Window_MouseDown">
+
+    <Window.DataContext>
+        <viewModel:TaskManagerViewModel></viewModel:TaskManagerViewModel>
+    </Window.DataContext>
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"></BooleanToVisibilityConverter>
+    </Window.Resources>
+
+    <Window.Visibility>
+        <Binding Path="IsViewVisible" Mode="TwoWay" Converter="{StaticResource BooleanToVisibility}"></Binding>
+    </Window.Visibility>
 
     <Grid x:Name="G_ControlPanel" Background="Transparent">
 
@@ -30,17 +43,17 @@
                                FontSize="20" Foreground="White"></TextBlock>
                     <!--#endregion-->
                     <!--#region BUTTONS-->
-                    <Button Grid.Row="0" Grid.Column="2" Name="BtnCerrar"
+                    <Button Grid.Row="0" Grid.Column="2" Name="BtnMinimizar"
                             Width="35" Height="30"
                             HorizontalAlignment="Right" VerticalAlignment="Center"
                             Background="#1B1448" BorderBrush="#007ED6">
-                        <TextBlock Text="X" Foreground="White" FontSize="20"></TextBlock>
+                        <TextBlock Text="-" Foreground="White" FontSize="20"></TextBlock>
                     </Button>
-                    <Button Grid.Row="0" Grid.Column="2" Name="BtnMinimizar"
+                    <Button Grid.Row="0" Grid.Column="2" Name="BtnCerrar"
                             Width="35" Height="30"
                             HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,35,0"
                             Background="#1B1448" BorderBrush="#007ED6">
-                        <TextBlock Text="-" Foreground="White" FontSize="20"></TextBlock>
+                        <TextBlock Text="X" Foreground="White" FontSize="20"></TextBlock>
                     </Button>
                     <!--#endregion-->
                 </StackPanel>
@@ -64,7 +77,7 @@
                                 Width="120" Height="50"
                                 HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,8,0,0"
                                 Background="#34495E" BorderBrush="#5D6D7E"
-                                Command="{Binding}">
+                                Command="{Binding CreatTaskCommand}">
                             <StackPanel Orientation="Horizontal">
                                 <fa:IconImage Icon="Add"
                                               Style="{StaticResource menuButtonIcon}"></fa:IconImage>
@@ -81,7 +94,7 @@
                                 Width="120" Height="50"
                                 HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,8,0,0"
                                 Background="#34495E" BorderBrush="#5D6D7E"
-                                Command="{Binding}">
+                                Command="{Binding EditTaskCommand}">
                             <StackPanel Orientation="Horizontal">
                                 <fa:IconImage Icon="Edit"
                                               Style="{StaticResource menuButtonIcon}"></fa:IconImage>
@@ -94,7 +107,7 @@
                                 Width="120" Height="50"
                                 HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,8,0,0"
                                 Background="#34495E" BorderBrush="#5D6D7E"
-                                Command="{Binding}">
+                                Command="{Binding ExecuteNowCommand}">
                             <StackPanel Orientation="Horizontal">
                                 <fa:IconImage Icon="PlayCircle"
                                               Style="{StaticResource menuButtonIcon}"></fa:IconImage>
@@ -110,7 +123,7 @@
                                 Width="120" Height="50"
                                 HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,8,0,0"
                                 Background="#34495E" BorderBrush="#5D6D7E"
-                                Command="{Binding}">
+                                Command="{Binding DeleteCommand}">
                             <StackPanel Orientation="Horizontal">
                                 <fa:IconImage Icon="Remove"
                                               Style="{StaticResource menuButtonIcon}"></fa:IconImage>
